# cell_automata

./: CMakeLists.txt  README.md
src/: compute_shader.cpp  gl_deps.h  main.cpp  read_file.cpp  shader.cpp  shader.h  texture.cpp  texture.h
